@@ -1,4 +1,4 @@
-package com.camsys.assetcloud.needsforecaster.services;
+package com.camsys.assetcloud.needsforecaster.services.external;
 
 import com.camsys.assetcloud.needsforecaster.dataimport.MockAssets;
 import com.camsys.assetcloud.needsforecaster.model.Asset;
@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service("mockAIService")
 public class MockAssetInventoryService implements AssetInventoryService {
@@ -43,12 +42,13 @@ public class MockAssetInventoryService implements AssetInventoryService {
     }
 
     @Override
-    public List<Asset> getActiveAssets(String orgKey, String assetTypeKey) {
-        try {
-            List<Asset> allAssets = mockAssets.load();
-            return allAssets.stream().filter(a -> a.orgKey.equals(orgKey) && a.assetTypeKey.equals(assetTypeKey)).collect(Collectors.toList());
-        }
-        catch (IOException e) {}
-        return null;
+    public List<Asset> getActiveAssets(String orgKey, List<String> assetTypeKeys) throws Exception {
+        List<Asset> allAssets = mockAssets.load();
+        return allAssets.stream().filter(a -> a.orgKey.equals(orgKey) && assetTypeKeys.contains(a.assetTypeKey)).toList();
+    }
+
+    @Override
+    public void broadcastAssetUpdates(List<Asset> assets) {
+        System.out.println("Broadcast asset updates (size: " + assets.size() + ")");
     }
 }
